# Aegis---LandSandBoat

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: build.yml  changelog.yml  ci.yml  docker_build.yml  docker_test.yml  pr_checks.yml  pr_stale.yaml  runner_build.yml  runner_test.yml  test.yml
cmake/: FindMariaDBCPP.cmake  FindOpenSSL.cmake  StandardProjectSettings.cmake
documentation/: Regime_IDs.csv
ext/: CMakeLists.txt
res/: testserver.rc
scripts/commands/: addallspells.lua  chocobo.lua  time.lua  yell.lua
scripts/effects/: allies_roll.lua  aspir_daze.lua  atma.lua  aubade.lua  avengers_roll.lua  ballad.lua  battlefield.lua  beast_roll.lua  bio.lua  blitzers_roll.lua  bolters_roll.lua  capriccio.lua  (+56 more)
sql/: abilities.sql  chars.sql  guild_shops.sql  item_basic.sql  item_latents.sql  item_mods.sql  item_usable.sql  item_weapon.sql  mob_droplist.sql  mob_family_mods.sql  mob_family_system.sql  mob_groups.sql  mob_pets.sql  mob_pool_mods.sql  mob_pools.sql  mob_resistances.sql  mob_skill_lists.sql  mob_skills.sql  mob_spell_lists.sql  nm_spawn_points.sql  pet_list.sql  pet_skills.sql  spell_list.sql  status_effects.sql  synth_recipes.sql  transport.sql  weapon_skills.sql  zone_settings.sql
src/: CMakeLists.txt
src/test/: CMakeLists.txt  main.cpp  test_application.cpp  test_application.h  test_engine.cpp  test_engine.h
src/test/lua/: lua_spy.cpp  lua_stub.cpp
src/test/lua/helpers/: lua_client_entity_pair_actions.cpp  lua_client_entity_pair_actions.h
test/: CMakeLists.txt
tools/: dbtool.py  generate_ipc_stubs.py
(+2699 files in other folders)
